--- a/result.tex
+++ b/result.tex
@@ -227,7 +227,7 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 %>> factor
 %>> of 1.0456 difference for the resonant frequencies of the magnetic mode.%}}}
 
-\section{SRRs and spheres in wire grid} % references to ->
+\section{SRRs and spheres in a wire array or grid} % references to ->
 %{{{
 \begin{figure} \caption{img/SphereWire\_eps100\_R25\_FDTD.pdf}  \centering  \includegraphics[width=10cm]{img/SphereWire_eps100_R25_FDTD.pdf} \end{figure} \clearpage
 \begin{figure} \caption{SphereWire sketch}  \centering  \includegraphics[width=10cm]{img/SphereWire_sketch.pdf} \end{figure} \clearpage
