--- a/defs.tex
+++ b/defs.tex
@@ -1,10 +1,10 @@
 \newcommand{\again}{again}
 \newcommand{\E}{\mathbf{E}}
-\newcommand{\D}{\mathbf{\tilde{D}}}
-\newcommand{\Dsd}{\mathbf{D}}
+\newcommand{\D}{\mathbf{D}}
+\newcommand{\Dsd}{{\mathbf{D}^\text{LL}}}
 \newcommand{\B}{\mathbf{B}}
-\newcommand{\HH}{\mathbf{\tilde{H}}}
-\newcommand{\HHsd}{\mathbf{H}}
+\newcommand{\HH}{\mathbf{H}}
+\newcommand{\HHsd}{{\mathbf{H}^\text{LL}}}
 \newcommand{\epsrl}{\varepsilon_r}
 \newcommand{\murl}{\mu_r}
 %\newcommand{\epsrl}{\varepsilon^{\rm(Loc)}_r}
