changed dot-cite to cite-dot

--- a/expe.tex
+++ b/expe.tex
@@ -31,7 +31,7 @@ The active region of the TeraSED emitter was of comparable diameter as the longe
  mirror and refocused at the sample. Upon passing through it, it diffracted again and was collected by an identical ellipsoidal mirror and focused at the detector. 
 To allow enough clearance for a bigger instrumentation surrounding sample, such as a liquid-helium cryostat or a heating furnace, the ellipsoidal mirrors were separated by 0.3 m and the whole beam path approached 0.6 m. % TODO check with a ruler
 
-Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air with significant concentration. The absorption forms clear notches in the terahertz transmission spectra, for instance around 0.62, 0.75, 1.07 and 1.41 THz, which can be traced down to discrete rotational levels of the water molecules.\cite{exter1989} In time domain, the absorption manifests as a exponentially decaying ringdown that has polarity opposite to the main THz peak.
+Propagation of terahertz waves in air over such a distance is impeded by absorption of water vapour, which is the only polar molecule found in the air with significant concentration. The absorption forms clear notches in the terahertz transmission spectra, for instance around 0.62, 0.75, 1.07 and 1.41 THz, which can be traced down to discrete rotational levels of the water molecules \cite{exter1989}. In time domain, the absorption manifests as a exponentially decaying ringdown that has polarity opposite to the main THz peak.
 % TODO figure from my web
 The whole terahertz wave path has to be confined in an environment free of water vapour, and the fastest way to reliably achieve this was to enclose the emitter, mirrors, sample and detector in a vacuum chamber evacuated by a two-stage rotary pump. 
 
@@ -57,7 +57,7 @@ To reduce the noise, synchronous detection with the \textit{Stanford SRS360} loc
 The time constant of the lock-in acquisition was comparable to the time which was needed by the delay lines to introduce a picosecond delay. As a result, the speed of delay lines movement suppressed the high-frequency components of the detected signal. Precise control of the delay line speed and timing, along with software compensation for this, was needed.
 %}}}
 \paragraph{Scheme for simultaneous measurement of reflection and transmission}%{{{
-With addition or rearrangement of optics, it would be theoretically possible to measure the \textit{reflection spectrum} using TDTS in a similar way the transmission spectrum was measured. However, due to the complexity of such a setup and sensitivity to sample displacement, we did not use a second sampling branch for reflected signal. Instead of using two sampling schemes, it is possible to recover the amplitude and phase reflectivity of a sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs.\cite{nemec2012resonant} Thanks to the relatively high refractive index of sapphire ($N \approx 3.068$), these slabs introduce several distinct  echoes into the transmission signal.
+With addition or rearrangement of optics, it would be theoretically possible to measure the \textit{reflection spectrum} using TDTS in a similar way the transmission spectrum was measured. However, due to the complexity of such a setup and sensitivity to sample displacement, we did not use a second sampling branch for reflected signal. Instead of using two sampling schemes, it is possible to recover the amplitude and phase reflectivity of a sample by stacking it between a pair of thick (3 and 6 mm) sapphire slabs \cite{nemec2012resonant}. Thanks to the relatively high refractive index of sapphire ($N \approx 3.068$), these slabs introduce several distinct  echoes into the transmission signal.
 %\begin{figure} \caption{A broadband pulse passes through a single layer of microspheres randomly arranged between two sapphire slabs and is sampled by electrooptical detection.}  \centering \includegraphics[width=12cm]{img/expe/sample_sapphires.pdf} \end{figure}			%% TODO no use for this?
 
 If the beam divergence is neglected, each optical element can be characterised by its complex transfer function in the resulting spectrum. One needs to define three complex transmission functions: for the beam passing through the volume of the thin sapphire $A(f)$, of the thick sapphire $B(f)$ and through the thin sample $t(f)$. Additionally two reflection functions for the beam reflected on sapphire-air interface $r_{A}(f)$ and on the sapphire-sample interface $r_S(f)$
