--- a/numeric.tex
+++ b/numeric.tex
@@ -375,7 +375,7 @@ As a convenient implementation of PWEM, we used  the freely available program \t
 The \textit{transfer-matrix method} (TMM, or also \textit{Abelès formalism}) provides an analytically exact and notably simple computation of the transmission of one-dimensional, layered structures. It has been applied e.g. for the design of antireflective layers, dielectric mirrors, defect-mode filters etc. It shall be noted that extensions of TMM for two- or three-dimensional computation also exist \cite{pendry1992_transfer_matrix}, \cite[pp. 71--77]{nemec2006phd}, enabling to compute,  in frequency-domain, e.g. the reflection and transmission of structures discretized in a grid. For simplicity, we describe the one-dimensional method.
 
 The method is on dividing the structure into a sequence of homogeneous layers. For each layer, a $2\times 2$ \textit{transfer} matrix is prepared that relates the $\mathbf E$ and $\mathbf H$ of the forward and backward propagating waves. If the $m$-th layer has a wave impedance $Z_m$, refractive index $N_m$ and thickness $d_m$, the transfer matrix $\mathbb M^{(m)}$ is given as
-\begin{equation} \mathbb M^{(m)} := \left(\begin{array}{cc} \cos\delta & (i/\gamma)\sin\delta \\ i\gamma\sin\delta & \cos\delta \end{array}\right), \quad\text{ where }\gamma:=1/Z_m\text{ and }\delta := k N_m d_m.\label{eq_tmm1}\end{equation}
+\begin{equation} \mathbb M^{(m)} := \left(\begin{array}{cc} \cos\delta & (i/\gamma)\sin\delta \\ i\gamma\sin\delta & \cos\delta \end{array}\right), \quad\text{ where }\gamma:=1/Z_m\text{ and }\delta := k~N_m d_m.\label{eq_tmm1}\end{equation}
 Multiplication of such matrices gives the overall transfer matrix of the layered structure, 
 \begin{equation} \mathbb M^{(tot)} \equiv \left(\begin{array}{cc} m_{11} & m_{12} \\ m_{21} & m_{22} \end{array}\right) = \ldots \cdot \mathbb M^{(2)} \cdot \mathbb M^{(1)}. \label{eq_tmm2}\end{equation}
 The overall reflection $r^{(tot)}$ and transmission $t^{(tot)}$ are then 
@@ -467,7 +467,7 @@ The averaged electric and magnetic field recorded at the first monitor plane wil
 The excitation pulse ca. 2 ps long excited in the structure two distinct resonances that both decayed exponentially in time with different decay rate, as is outlined by thin line segments. About 35 ps after the source was switched off, the stronger resonance reduces its intensity below that of the higher quality resonance, which can be clearly seen as a change of the decaying amplitude slope. The simulation time  was $t_{sim} =$ 150 ps.
 \begin{figure}[ht] \centering \caption{Time-domain records of the fields in the s-parameter-based retrieval method; absolute values of the (complex) fields} \includegraphics[width=9.5cm]{img/sim_timedomain_debug.pdf} \label{fg_sparam_timedomain} \end{figure}
 
-%% Skutečný optimismus není věřit, že bude dobře, ale že budu mít v každé situaci možnost, sílu a odhodlání učinit všechno k tomu, aby lépe bylo. 
+%% Skutečný optimismus není věřit, že bude dobře, ale že budu mít v~každé situaci možnost, sílu a odhodlání učinit všechno k~tomu, aby lépe bylo. 
 
 The spectral resolution is determined by the length of the time record. As a general rule, the higher quality of resonance, the sharper its spectral features. The case of a short time record significantly clipping a resonance ringdown is equivalent to coarse sampling on the frequency axis, which can not fully resolve the shape of the resonance. From the Fourier-Plancherel theorem %% TODO ref
 it follows that the energy part stored in the clipped resonance will disappear from the frequency domain, too. As a result, characteristic ringing in the spectra will occur. Using the convolution theorem (see Sect. \ref{subsection_local_resp}), it can be deduced that applying a rectangular window in time domain results in a convolution with the sinc function in the spectrum. 
@@ -515,7 +515,7 @@ Finally, one can easily compute the complex scattering parameters $r(f)$ and $t(
 \label{fg_STO_bar_geom} \end{figure} 
 To verify the simulation results against experimental data, we computed $r(f)$ and $t(f)$ for a structure that was measured previously in our terahertz laboratory.
 It consisted of an array of high-permittivity dielectric bars, cut using a femtosecond laser % TODO what laser power and other parameters?
-from a 26 $\upmu$m thick strontium titanate (STO) slab.\cite{nemec2009tunable} The periodicity was 96 $\upmu$m and the laser cut width was 30 $\upmu$m, resulting in 66 $\upmu$m width of each rectangular bar as shown in Fig. \ref{fg_STO_bar_geom}a,b. The permittivity of STO strongly depends on the temperature, and was not known a priori, so it was chosen as $\varepsilon_r(1\text{ THz}) = 365 + 62\ii$ for the simulation to match the experimental spectra.
+from a 26 $\upmu$m thick strontium titanate (STO) slab \cite{nemec2009tunable}. The periodicity was 96 $\upmu$m and the laser cut width was 30 $\upmu$m, resulting in 66 $\upmu$m width of each rectangular bar as shown in Fig. \ref{fg_STO_bar_geom}a,b. The permittivity of STO strongly depends on the temperature, and was not known a priori, so it was chosen as $\varepsilon_r(1\text{ THz}) = 365 + 62\ii$ for the simulation to match the experimental spectra.
 \begin{figure} \caption{Experimental transmission $t_{exp}(f)$, compared to numerical reflection $r(f)$ and transmission $t(f)$ for strontium titanate bars $||\mathbf E$ of rectangular cross-section $26 \times 66\;\upmu$m. }  \centering \includegraphics[width=12cm]{img/STObar_rt.pdf} \label{fg_STO_bar_rt} \end{figure} 
 The curves computed using the FDTD simulations are compared to the experimental ones in Fig. \ref{fg_STO_bar_rt}, with a very good match in three well-resolved resonance peaks, and also in the high reflectivity ($|r| > 0.9$) in most of the spectrum which is caused by a great impedance mismatch between the dielectric and the surrounding air.
 
